implement GET v1/user endpoint
